<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="model"
            type="com.bizarrecoding.sleeptracker.ui.main.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.main.MainFragment"
            tools:showIn="@layout/activity_main">

        <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/header_padding"
                    android:layout_marginEnd="@dimen/header_padding"
                    android:orientation="vertical">

                <androidx.cardview.widget.CardView
                        android:id="@+id/Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/header_padding"
                            android:layout_marginEnd="@dimen/header_padding"
                            android:background="@android:color/transparent">

                        <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/app_name"
                                android:textAlignment="viewStart"
                                android:textSize="22sp"
                                android:textStyle="normal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:id="@+id/Score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="@color/backgroundCard"
                        app:cardCornerRadius="8dp"
                        app:hideIfNull='@{model.statsPresent}'>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/stats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent">

                        <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/sleep_score"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/label_duration"
                                app:layout_constraintStart_toStartOf="@+id/textView3"
                                app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/deficit"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="@+id/textView4"
                                app:layout_constraintTop_toBottomOf="@+id/textView4"
                                app:layout_constraintVertical_bias="0.0" />

                        <ProgressBar
                                android:id="@+id/progressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:progress="@{model.progress}"
                                android:progressBackgroundTint="@color/backgroundDark"
                                android:progressTint="@color/colorAccent2"
                                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                                app:layout_constraintEnd_toStartOf="@+id/textView9"
                                app:layout_constraintStart_toEndOf="@+id/textView4"
                                app:layout_constraintTop_toTopOf="@+id/textView4"
                                tools:progress="81" />

                        <TextView
                                android:id="@+id/deficit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@{@string/formatDouble(model.average-8)}"
                                android:textColor="@color/colorAccent2"
                                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                                app:layout_constraintStart_toEndOf="@+id/textView5" />

                        <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                tools:text="8:00"
                                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/progressBar" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:id="@+id/CurrentAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="@color/backgroundCard"
                        app:cardCornerRadius="8dp"
                        app:hideIfNull='@{model.present}'>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/backgroundCard">

                        <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:text="@{model.alarmWithDays.alarm.getName()}"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="@string/app_name" />

                        <TextView
                                android:id="@+id/remains"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="16dp"
                                android:text='@{model.alarmWithDays.timeRemaining()}'
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="(6h30)" />

                        <ImageView
                                android:id="@+id/timeIcon"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_marginStart="16dp"
                                android:tint="@color/colorAccent"
                                app:layout_constraintBottom_toBottomOf="@+id/time"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/time"
                                app:srcCompat="@drawable/alarm" />

                        <TextView
                                android:id="@+id/time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:text='@{model.alarmWithDays.alarm.getFormattedTime() ?? "None"}'
                                android:textSize="40sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/timeIcon"
                                app:layout_constraintTop_toBottomOf="@+id/name"
                                app:layout_constraintVertical_bias="0.0"
                                tools:text="10:20 am" />

                        <TextView
                                android:id="@+id/days"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:text="@{model.alarmWithDays.activeDays()}"
                                android:textColor="#aaa"
                                android:textSize="20sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="@+id/timeIcon"
                                app:layout_constraintTop_toBottomOf="@+id/time"
                                tools:text="LU, MA, MI, JU, VI" />

                        <ImageView
                                android:id="@+id/edit"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="8dp"
                                android:tint="@color/colorAccent2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:srcCompat="@drawable/table_edit" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center|center_horizontal"
                        android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/newAlarm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="16dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:src="@drawable/alarm_plus"
                            app:backgroundTint="@color/backgroundCard"
                            app:tint="@color/colorAccent" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
                android:id="@+id/nightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/start_sleep"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/test"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/backgroundDark"
                android:text="@string/test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>